Add APIs to evaluate policies get result from OPA
