# server/handle_policy_eval.go
@@ -35,8 +35,8 @@ type evalResult struct {
 	IsSuccessful bool   `json:"isSuccessful" binding:"required"`
 }
 
-// @Tags			Policies Evaluate
-// @Summary		Evaluate the policies
+// @Tags			Policies Evaluation
+// @Summary		Evaluate the input by policies
 // @description	Evaluate whether the input meets all the policies
 // @Accept			json
 // @Produce		json
@@ -79,8 +79,43 @@ func policiesEvaluateHandler(_ *config.Conf) gin.HandlerFunc {
 	}
 }
 
-// @Tags			Policies Evaluate
-// @Summary		Evaluate the policy
+// @Tags			Policies Evaluation
+// @Summary		Evaluate the input by policies
+// @description	Evaluate the input by all the policies and get raw result
+// @Accept			json
+// @Produce		json
+// @Param			cmdList	body	evalCmdList	true	"evalCmdList"
+// @Router			/evaluate/policies/raw [POST]
+// @Success		200	{object}	rego.ResultSet	"OK"
+// @Failure		400	{object}	ErrorResult		"Bad Request"
+// @Failure		500	{object}	ErrorResult		"Internal Server Error"
+// @Failure		502	{object}	ErrorResult		"Bad Gateway"
+func policiesEvaluateRawHandler(_ *config.Conf) gin.HandlerFunc {
+	return func(c *gin.Context) {
+
+		var cmdList evalCmdList
+
+		if err := c.ShouldBindWith(&cmdList, binding.JSON); err != nil {
+			log.Debug(err)
+			abortWithError(c, http.StatusBadRequest, fmt.Sprintf("Missing required field. Details:%v", err))
+			return
+		}
+
+		var allResultSet rego.ResultSet
+		for _, policy := range cmdList.PolicyList {
+			results, err := policyQueryGetRawResult(policy, cmdList.Input)
+			if err != nil {
+				abortWithError(c, http.StatusInternalServerError, err.Error())
+				return
+			}
+			allResultSet = append(allResultSet, results...)
+		}
+		c.JSON(http.StatusOK, allResultSet)
+	}
+}
+
+// @Tags			Policies Evaluation
+// @Summary		Evaluate the input by policies
 // @description	Evaluate whether the input meets the policy
 // @Accept			json
 // @Produce		json
@@ -113,14 +148,53 @@ func policyEvaluateHandler(_ *config.Conf) gin.HandlerFunc {
 	}
 }
 
+// @Tags			Policies Evaluation
+// @Summary		Evaluate the input by policies
+// @description	Evaluate the input by the policy and get raw result
+// @Accept			json
+// @Produce		json
+// @Router			/evaluate/policy/raw [POST]
+// @Param			cmd	body		evalCmd			true	"evalCmd"
+// @Success		200	{object}	rego.ResultSet	"OK"
+// @Failure		400	{object}	ErrorResult		"Bad Request"
+// @Failure		500	{object}	ErrorResult		"Internal Server Error"
+// @Failure		502	{object}	ErrorResult		"Bad Gateway"
+func policyEvaluateRawHandler(_ *config.Conf) gin.HandlerFunc {
+	return func(c *gin.Context) {
+
+		var cmd evalCmd
+
+		if err := c.ShouldBindWith(&cmd, binding.JSON); err != nil {
+			log.Debug(err)
+			abortWithError(c, http.StatusBadRequest, fmt.Sprintf("Missing required field. Details:%v", err))
+			return
+		}
+
+		results, err := policyQueryGetRawResult(cmd.Policy, cmd.Input)
+		if err != nil {
+			abortWithError(c, http.StatusInternalServerError, err.Error())
+			return
+		}
+		c.JSON(http.StatusOK, results)
+	}
+}
+
 func policyQuery(policyRego string, input interface{}) (decision bool, err error) {
+
+	policyRegoEx := handlePackageName(policyRego)
+	policyQuery := "result=data.policyman.auth"
+	results, err := PolicyEval(policyRegoEx, policyQuery, input)
+	return getBoolValueFromRawResult(results, err)
+}
+
+func policyQueryGetRawResult(policyRego string, input interface{}) (results rego.ResultSet, err error) {
 
 	policyRegoEx := handlePackageName(policyRego)
 	policyQuery := "data.policyman.auth"
 	return PolicyEval(policyRegoEx, policyQuery, input)
 }
 
-func PolicyEval(policyRego string, policyQuery string, input interface{}) (decision bool, err error) {
+func PolicyEval(policyRego string, policyQuery string, input interface{}) (results rego.ResultSet, err error) {
 
 	defer func() {
 		if r := recover(); r != nil {
@@ -130,13 +204,12 @@ func PolicyEval(policyRego string, policyQuery string, input interface{}) (decis
 	}()
 
 	ctx := context.TODO()
-
 	query, err := rego.New(
-		rego.Query(fmt.Sprintf("result = %s", policyQuery)),
+		rego.Query(policyQuery),
 		rego.Module("policy-man.rego", policyRego),
 	).PrepareForEval(ctx)
 	if err != nil {
-		return false, fmt.Errorf("prepare for rego failed as fllow:\n %v", err)
+		return nil, fmt.Errorf("prepare for rego failed as fllow:\n %v", err)
 	}
 
 	var inputMap map[string]interface{}
@@ -146,12 +219,16 @@ func PolicyEval(policyRego string, policyQuery string, input interface{}) (decis
 	} else {
 		err = json.Unmarshal([]byte(input.(string)), &inputMap)
 		if err != nil {
-			return false, err
+			return nil, err
 		}
 	}
+	results, err = query.Eval(ctx, rego.EvalInput(inputMap))
 
-	results, err := query.Eval(ctx, rego.EvalInput(inputMap))
+	return results, err
 
+}
+
+func getBoolValueFromRawResult(results rego.ResultSet, err error) (decision bool, error error) {
 	if err != nil {
 		return false, err
 	} else if len(results) == 0 {
@@ -171,8 +248,6 @@ func PolicyEval(policyRego string, policyQuery string, input interface{}) (decis
 				return false, nil
 			}
 		}
-
 	}
-
 	return true, nil
 }
